CR:Rohan adding documentation for swagger
